# KoKoBOT

./: .env  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  start.sh
plugins/nonebot_plugin_abstract/: __init__.py
plugins/nonebot_plugin_answersbook/: __init__.py
plugins/nonebot_plugin_chatgpt/: __init__.py  config.py  func.py
plugins/nonebot_plugin_ddcheck/: __init__.py
plugins/nonebot_plugin_dog/: __init__.py  utils.py
plugins/nonebot_plugin_emojimix/: __init__.py
plugins/nonebot_plugin_fakemsg/: __init__.py
plugins/nonebot_plugin_fortune/: __init__.py  config.py  data_source.py  download.py  utils.py
plugins/nonebot_plugin_fortune/resource/: specific_rules.json
plugins/nonebot_plugin_herocard/: __init__.py
plugins/nonebot_plugin_key_words/: __init__.py  data_source.py
plugins/nonebot_plugin_longtu/: __init__.py
plugins/nonebot_plugin_memes/: __init__.py
plugins/nonebot_plugin_menu/: __init__.py  func.py
plugins/nonebot_plugin_questionmark/: __init__.py
plugins/nonebot_plugin_randomnana/: __init__.py
plugins/nonebot_plugin_russian/: __init__.py  utils.py
plugins/nonebot_plugin_setu_collection/: __init__.py
plugins/nonebot_plugin_setu_collection/api/: Anosu.py  Lolicon.py  (+1 more)
plugins/nonebot_plugin_simplemusic/: __init__.py  data_source.py
plugins/nonebot_plugin_tarot/: __init__.py  config.py  data_source.py
plugins/nonebot_plugin_today_in_history/: __init__.py  config.py  utils.py
plugins/nonebot_plugin_today_waifu/: __init__.py  config.py  record.py
plugins/nonebot_plugin_who_at_me/: __init__.py  rule.py  utils.py
